# gig-platform

./: .env.example  .flake8  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.py  setup.py
.render/: build.sh
instance/: .gitignore  gig_platform.db
migrations/: env.py  script.py.mako
src/: config.py
src/gig_platform/: __init__.py  __main__.py  commands.py
src/gig_platform/forms/: __init__.py  job_form.py  worker_form.py
src/gig_platform/instance/: gig_platform.db
src/gig_platform/models/: __init__.py  job.py  worker.py
src/gig_platform/routes/: __init__.py  jobs.py  main.py  map.py  workers.py
src/gig_platform/services/: __init__.py  geocoding.py  validation.py
src/gig_platform/static/css/: style.css
src/gig_platform/templates/: base.html  index.html  map.html
src/gig_platform/utils/: __init__.py  helpers.py
static/css/: style.css
static/js/: script.js
templates/: base.html  gigs.html  index.html  jobs.html  map.html  workers.html
tests/: conftest.py  test_models.py  test_routes.py
